tests/lean/format_thunk1.lean.expected.out
format_thunk1.lean:4:0: error: invalid definev tactic, value has type
  ℕ
but is expected to have type
  string
state:
⊢ true
